syntax = "proto3";

package application;

option java_package = "com.proto.application";
option java_multiple_files = true;

// this service includes two types APIs, server-side streaming and client-side streaming

message ApplicationDetails {
  int32 id = 1;
  string name = 2;
  string publisher = 3;
  double storageOccupied = 4;
  double storageRemaining = 5;
  string status = 6;
}

message ApplicationDetailsResponse {
  ApplicationDetails applicationDetails = 1;
}

message ApplicationDetailsRequest{

}

service ApplicationService {
  // server-side streaming call
  rpc ApplicationDetails( ApplicationDetailsRequest) returns (stream ApplicationDetailsResponse) {};
}